--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         </div>
                         <div class="col-7 text-left py-3">
                             <h1 class="text-danger font-weight-bold font40">46</h1>
-                            <p class="text-light mb-1">(out of X) <b>unique recipes</b> I have successfully tried</p>
+                            <p class="text-light mb-1">(Out of X) <b>unique recipes</b> I have successfully tried</p>
                         </div>
                     </div>
                 </div>
@@ -1053,7 +1053,17 @@
         </div>
     </section>
 
+    <form action="/feedback_form.php" method="post">
 
+        <label>Email Address</label>
+        <input type="text" name="email_address" size="40">
+
+        <label>Your Feedback</label>
+        <textarea name="feedback" cols="50" rows="10"></textarea>
+
+        <input type="submit" name="send" value="Submit">
+
+    </form>
     <!-- <form method="post" name="myemailform" action="subscriberform.php">
 
         Enter Name: <input type="text" name="name">
@@ -1072,7 +1082,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form method="post" name="myemailform" action="subscriberform.php">
+                        <form action="subscriberform.php" method="post" name="myemailform">
                             <div class="form-group">
                                 <input class="form-control" type="text" name="name" placeholder="Name *" required>
                             </div>
@@ -1084,8 +1094,9 @@
                                     required></textarea>
                             </div>
                             <div class="form-group ">
-                                <button type="submit" value="Send Form" class="form-control btn btn-primary">Send
-                                    Message</button>
+                                <input type="submit" name="send" value="Submit">
+                                <!-- <button type="submit" value="Send Form" class="form-control btn btn-primary">Send
+                                    Message</button> -->
                             </div>
                         </form>
                     </div>
