New changes with no email form (does not work on github pages)

--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
         </div>
     </section>
 
-    <form action="/feedback_form.php" method="post">
+    <!-- <form action="/feedback_form.php" method="post">
 
         <label>Email Address</label>
         <input type="text" name="email_address" size="40">
@@ -1063,7 +1063,7 @@
 
         <input type="submit" name="send" value="Submit">
 
-    </form>
+    </form> -->
     <!-- <form method="post" name="myemailform" action="subscriberform.php">
 
         Enter Name: <input type="text" name="name">
@@ -1075,7 +1075,7 @@
         <input type="submit" value="Send Form">
     </form> -->
 
-    <div class="section contact" id="contact">
+    <!-- <div class="section contact" id="contact">
         <div id="map" class="map"></div>
         <div class="container">
             <div class="row">
@@ -1095,13 +1095,13 @@
                             </div>
                             <div class="form-group ">
                                 <input type="submit" name="send" value="Submit">
-                                <!-- <button type="submit" value="Send Form" class="form-control btn btn-primary">Send
-                                    Message</button> -->
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-4">
+                                <button type="submit" value="Send Form" class="form-control btn btn-primary">Send
+                                    Message</button> 
+            </div>
+            </form>
+        </div>
+    </div>
+                <div class="col-lg-12">
                     <div class="contact-info-card">
                         <h4 class="contact-title">Get in touch</h4>
                         <!-- <div class="row mb-2">
@@ -1112,44 +1112,42 @@
                                 <h6 class="d-inline">Phone : <br> <span class="text-muted">+ (123) 456-789</span></h6>
                             </div>
                         </div> -->
-                        <div class="row mb-2">
-                            <div class="col-1 pt-1 mr-1">
-                                <i class="ti-email icon-md"></i>
-                            </div>
-                            <div class="col-10">
-                                <h6 class="d-inline">Email :<br> <span class="text-muted">tzver@outlook.com</span></h6>
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-1 pt-1 mr-1">
-                                <i class="ti-map-alt icon-md"></i>
-                            </div>
-                            <div class="col-10">
-                                <h6 class="d-inline">Place :<br> <span class="text-muted">Amsterdam</span></h6>
-                            </div>
-                        </div>
-                        <ul class="social-icons pt-4">
-                            <li class="social-item"><a class="social-link text-dark" href="mailto:tara@outlook.com"
-                                    target="_blank"><i class="ti-email" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark"
-                                    href="https://www.linkedin.com/in/tarazver/" target="_blank"><i class="ti-linkedin"
-                                        aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="https://github.com/tzver"
-                                    target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
+    <!-- <div class="row mb-2">
+        <div class="col-1 pt-1 mr-1">
+            <i class="ti-email icon-md"></i>
+        </div>
+        <div class="col-10">
+            <h6 class="d-inline">Email :<br> <span class="text-muted">tzver@outlook.com</span></h6>
         </div>
     </div>
+    <div class="row mb-2">
+        <div class="col-1 pt-1 mr-1">
+            <i class="ti-map-alt icon-md"></i>
+        </div>
+        <div class="col-10">
+            <h6 class="d-inline">Place :<br> <span class="text-muted">Amsterdam</span></h6>
+        </div>
+    </div>
+    <ul class="social-icons pt-4">
+        <li class="social-item"><a class="social-link text-dark" href="mailto:tara@outlook.com" target="_blank"><i
+                    class="ti-email" aria-hidden="true"></i></a></li>
+        <li class="social-item"><a class="social-link text-dark" href="https://www.linkedin.com/in/tarazver/"
+                target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+        <li class="social-item"><a class="social-link text-dark" href="https://github.com/tzver" target="_blank"><i
+                    class="ti-github" aria-hidden="true"></i></a></li>
+    </ul>
+    </div>
+    </div>
+    </div> -->
+
+    </div>
+    </div> -->
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
                 &copy;
                 <script>document.write(new Date().getFullYear())</script> Created With <i
-                    class="ti-heart text-danger"></i> By <a href="http://devcrud.com" target="_blank"><span
-                        class="text-danger" title="Bootstrap 4 Themes and Dashboards">DevCRUD</span></a>
+                    class="ti-heart text-danger"></i> By <span class="text-danger">Tara Zver</span>
             </p>
         </div>
     </footer>
