New changes with no email form (does not work on github pages)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" href="mailto:tara@outlook.com"
+                <li class="social-item"><a class="social-link text-light" href="mailto:tzver@outlook.com"
                         target="_blank"><i class="ti-email" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/tarazver/"
                         target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
@@ -55,9 +55,7 @@
                     <li class="nav-item">
                         <a href="#about" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#resume" class="nav-link">Resume</a>
-                    </li>
+
                 </ul>
                 <ul class="navbar-nav brand">
                     <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
@@ -71,11 +69,14 @@
                         <a href="#portfolio" class="nav-link">Portfolio</a>
                     </li> -->
                     <li class="nav-item">
+                        <a href="#resume" class="nav-link">Resume</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#portfolio" class="nav-link">Portfolio</a>
                     </li>
-                    <li class="nav-item last-item">
+                    <!-- <li class="nav-item last-item">
                         <a href="#contact" class="nav-link">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -132,7 +133,7 @@
                     </li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" href="mailto:tara@outlook.com" target="_blank"><i
+                    <li class="social-item"><a class="social-link" href="mailto:tzver@outlook.com" target="_blank"><i
                                 class="ti-email" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/tarazver/"
                             target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
@@ -168,8 +169,9 @@
                     <div class="col-10 ml-auto mr-3">
                         <h6>Mathematics tutoring</h6>
                         <p class="subtitle">Obtained a bachelor's in Business Analytics (Cum Laude), where I focused on
-                            Mathematics and Informatics, and a master's degree in Business Analytics, focusing on
-                            Operations Research.
+                            Mathematics and Informatics, and a master's degree in Business Analytics (Cum Laude),
+                            focusing on
+                            Operations Research. I taught mathematical classes for 2 years.
                         </p>
                         <hr>
                     </div>
@@ -812,7 +814,7 @@
         <div class="container text-center">
             <h4 class="text-light mb-5 font-weight-normal">Do you have an interesting project and would like to
                 collaborate? Let me know - I am always up for solving complex challenges!</h4>
-            <a href="#contact" class="btn bg-primary w-lg">Contact
+            <a href="mailto:tzver@outlook.com" class="btn bg-primary w-lg">Contact
                 me</a>
         </div>
     </section>
@@ -857,7 +859,7 @@
                                 Markhorst</a>,
                             Nina Malbasic, Renze Dijkstra, Daan Otto</p>
                         <a href="https://www.dinalog.nl/wiskunde-studenten-leveren-een-bijdrage-aan-het-verbeteren-van-covid-19-vaccinatieplanning/"
-                            target="_blank" class="read-more">Check out
+                            target="_blank">Check out
                             the article! <i class="ti-angle-double-right"></i></a>
 
                     </div>
@@ -884,9 +886,9 @@
                         <p><b>Other team members:</b> <a href="https://beerthies.github.io/" , target="_blank">Berend
                                 Markhorst</a>,
                             Nina Malbasic, Renze Dijkstra, Daan Otto</p>
+                        <a href="https://project-obp.herokuapp.com/" target="_blank">Check out
+                            the tool! <i class="ti-angle-double-right"></i></a>
 
-                        <a href="https://project-obp.herokuapp.com/" target="_blank">Check out the tool!<i
-                                class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -980,7 +982,7 @@
 
                         </p>
 
-                        <a href="https://www.mdpi.com/2076-393X/9/10/1181" target="_blank" class="read-more">Check out
+                        <a href="https://www.mdpi.com/2076-393X/9/10/1181" target="_blank">Check out
                             the article! <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
@@ -1129,7 +1131,7 @@
         </div>
     </div>
     <ul class="social-icons pt-4">
-        <li class="social-item"><a class="social-link text-dark" href="mailto:tara@outlook.com" target="_blank"><i
+        <li class="social-item"><a class="social-link text-dark" href="mailto:tzver@outlook.com" target="_blank"><i
                     class="ti-email" aria-hidden="true"></i></a></li>
         <li class="social-item"><a class="social-link text-dark" href="https://www.linkedin.com/in/tarazver/"
                 target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
