--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 </p>
 
                 <p>
-                    In the future, I want to work on interesting projects and solve complex problems that will advance
-                    technology to the next level.
+                    In the future, I want to work on interesting projects, solve complex problems and implement
+                    world-class technologies.
                 </p>
                 <!-- <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My Resume</button> -->
             </div>
@@ -127,10 +127,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li><span>Fun fact</span> : My surname means The Beast in Slovenian, which is, because of the
+                    <!-- <li><span>Fun fact</span> : My surname means The Beast in Slovenian, which is, because of the
                         unrelatable circumstances, also my
                         nickname
-                    </li>
+                    </li> -->
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="mailto:tzver@outlook.com" target="_blank"><i
